fix: gap

--- a/output.css
+++ b/output.css
@@ -1,7 +1,19 @@
 /*! tailwindcss v4.3.1 | MIT License | https://tailwindcss.com */
 @layer properties;
+.pointer-events-none {
+  pointer-events: none;
+}
+.absolute {
+  position: absolute;
+}
 .relative {
   position: relative;
+}
+.z-10 {
+  z-index: 10;
+}
+.z-\[-1\] {
+  z-index: -1;
 }
 .mx-auto {
   margin-inline: auto;
@@ -42,6 +54,9 @@
 .gap-\[1\.1rem\] {
   gap: 1.1rem;
 }
+.overflow-hidden {
+  overflow: hidden;
+}
 .border {
   border-style: var(--tw-border-style);
   border-width: 1px;
@@ -53,6 +68,15 @@
 .bg-transparent {
   background-color: transparent;
 }
+.bg-cover {
+  background-size: cover;
+}
+.bg-center {
+  background-position: center;
+}
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
 .pt-\[1\.5rem\] {
   padding-top: 1.5rem;
 }
@@ -62,9 +86,6 @@
 .pt-\[2rem\] {
   padding-top: 2rem;
 }
-.pt-\[4\.5rem\] {
-  padding-top: 4.5rem;
-}
 .pb-\[1\.5rem\] {
   padding-bottom: 1.5rem;
 }
@@ -73,12 +94,6 @@
 }
 .pb-\[2rem\] {
   padding-bottom: 2rem;
-}
-.pb-\[3rem\] {
-  padding-bottom: 3rem;
-}
-.pb-\[4\.5rem\] {
-  padding-bottom: 4.5rem;
 }
 .text-center {
   text-align: center;
@@ -148,10 +163,8 @@
 .opacity-40 {
   opacity: 40%;
 }
-.transition {
-  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-  transition-timing-function: var(--tw-ease, ease);
-  transition-duration: var(--tw-duration, 0s);
+.opacity-\[0\.15\] {
+  opacity: 0.15;
 }
 .transition-opacity {
   transition-property: opacity;
